--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <h3> <span> qualification : </span> MCA </h3>
         <h3> <span> post : </span> full stack developer </h3>
         <h3> <span> language : </span> English,Malayalam,Hindi,Tamil </h3>
-        <div class="vedio.">
-            <iframe width="355" height="633" src="https://www.youtube.com/embed/CtlU9o8xW_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="vedio">
+            <iframe width="368" height="654" src="https://www.youtube.com/embed/R-sbm65X2O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         
        
@@ -175,7 +175,7 @@
 <h1 class="heading"> my <span>Projects</span> </h1>
 <p id="demo"></p>
 <div class="box2">
-    <a href="https://anakhasibin.github.io/week-2">BALL SIMULATION</a>
+    <a href="https://github.com/Anakhasibin/week-2-">BALL SIMULATION</a>
 </div>
 <div class="box3">
     <a href="https://anakhasibin.github.io/randomwalk-solution/">Graphic Animation of the Random Walk Exercise</a>
