--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <h1 class="heading"> my <span>Projects</span> </h1>
 <p id="demo"></p>
 <div class="box2">
-    <a href="https://github.com/Anakhasibin/week-2-">BALL SIMULATION</a>
+    <a href="https://github.com/Anakhasibin/week-2">BALL SIMULATION</a>
 </div>
 <div class="box3">
     <a href="https://anakhasibin.github.io/randomwalk-solution/">Graphic Animation of the Random Walk Exercise</a>
